styles.css
* {
    padding: 0;
    margin: 0;
}

/* classes */
.red {
    color: #fe5783;
}

.grey {
   color: #BABAC4;
}

.white {
    color: white;
}

.uppercase {
    text-transform: uppercase;
}

.capitol {
    text-transform: capitalize;
}

.justify{
    justify-content: center;
}

.align {
    align-items: center;
}

.between {
    justify-content: space-between;
}

.photo {
    background: url("Metal background.jpeg") no-repeat center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-color: black;
}

.flex {
    display: flex;
}

.row {
    flex-direction: row;
}

.column {
    flex-direction: column;
}

.greyBackground {
    background-color: #BABAC4;
    padding-left: 20px;
    height: 100vh;
}

.end {
    justify-content: end;
}

#sideNav {
    visibility: hidden;
}

/* specifics for everything else */
/* header mobile view */
html {
    height: 100vh;
}
body {
    font-family: 'Oswald', sans-serif;
    width: 100%;
    height: 100vh;
}

header {
    background-color: white;
    display: flex;
    flex-direction: column;
    border-bottom: #BABAC4 4px solid;
    padding: 20px;
    width: 100%;
}

header img {
    height: 50px;
    width: 200px;
}

ul {
    list-style: none;
    padding-left: 0;
    margin: 0;
}

/* remove underline and correct color */
a {
    text-decoration: none;
}

a:hover {
    color: #fe5783;
}

/* capitolize orange text with rounded button */
nav button {
    border-radius: 25px;
    background-color: white;
    border: #fe5783 2px solid;
    padding: 10px;
    width: 100%;
}

/* log in floater */
main {
    display: flex;
}

/* white box with drop shadow in the center of area below header */
section {
    background-color: white;
    width: 400px;
    height: 450px;
    display: flex;
    flex-flow: column;
    box-shadow: #800003 10px 10px 20px;
}

h1 {
    text-transform: initial;
    padding-bottom: 5px;
    margin-bottom: 0;
}

h2 {
    font-size: 12px;
    padding-bottom: 20px;
}

input {
    display: flex;
    align-items: center;
    border: none;
    padding-top: 40px;
    padding-bottom: ;
    border-bottom: #BABAC4 2px solid;
    width: 340px;
}

/* changes text color for placeholders */
input::placeholder {
    color: #BABAC4;
    font-size: 15px;
}

label {
    font-size: 12px;
}

section a {
    font-size: 12px;
}

/* aligns buttons and "or" */
.buttons {
    display:flex;
    flex-direction: column;
    align-items: center;
}

/* slight rounded corner buttons for different sources */
button {
    align-items: center;
    width: 340px;
    border:none;
    border-radius: 3px;
    padding-top: 15px;
    padding-bottom: 15px;
    font-size: 12px;
    margin: 5px;
}

span {
    font-size: 12px;
}

/* changes the background of each button */
#login {
    background-color: #800003;   
}


#facebook {
    background-color:#559AD1;
}

#spotify {
    background-color: #39BD59;
}

/* Desktop version */
@media only screen and (min-device-width: 768px) {
    header {
        flex-direction: row;
        justify-content: space-between;
    }

    header nav {
        display: flex;
        flex-direction: row;
        align-items: center;
    }

    header nav ul {
        display: flex;
        flex-direction: row;
        align-items: center;
    }

    header nav ul li {
        padding-left: 20px
    }

    nav button {
        padding: 10px;
        height: 50px;
        width: 160px;
        margin-left: 10px;
    }

    #sideNav {
        visibility: visible;
        width: 150px;
        height: 100vh;
        padding-top: 20px;
        padding-bottom: 20px;
    }

}

